2001-02-05  Ulrich Drepper  <drepper@redhat.com>

	* localedata/Makefile (tests): Add bug-iconv-trans.
	Define bug-iconv-trans-ENV.
	* localedata/bug-iconv-trans.c: New file.

2001-02-04  Bruno Haible  <haible@clisp.cons.org>

	* iconv/gconv_trans.c (__gconv_transliterate): Use a temporary output
	pointer, to avoid accumulating output from incomplete (unsuccessful)
	transliteration attempts.

2001-02-05  Ulrich Drepper  <drepper@redhat.com>

	* elf/ldconfig.c (search_dir): Use PRIx64 instead of Lx in printf
	string.  Include <inttypes.h> instead of <stdint.h>.

	* configure.in: Add check for bison.
	* config.make.in: Define BISON variable.
	* intl/Makefile: Use BISON instead of YACC when generating plural.c.
	Rename YFLAGS to BISONFLAGS.

2001-02-05  Andreas Jaeger  <aj@suse.de>

	* io/test-lfs.c (do_test): Test lseek64 return value, call
	test_ftello.
	(test_ftello): New function to test ftello64 and fseeko64.

	* signal/signal.h: Move __sigaction from here to...
	* include/signal.h: ...here.

	* io/fcntl.h: Move __fcntl and __open to...
	* include/fcntl.h: ...here.

2001-02-04  Philip Blundell  <philb@gnu.org>

	* configure.in: Distinguish ARM from Thumb.

2001-02-04  Philip Blundell  <philb@gnu.org>

	* sysdeps/arm/dl-machine.h (elf_machine_rel): Correct handling of
	PC24 relocs with negative value.

2001-02-04  Ulrich Drepper  <drepper@redhat.com>

	* iconv/Makefile (iconv_prog-modules): Define.  Add vpath to find
	files in locale/programs.  Add CFLAGS definition to allow compiling
	localedef files.
	* iconv/dummy-repertoire.c: New file.
	* iconv/iconv_charmap.c: New file.
	* iconv/iconv_prog.h: New file.
	* iconv/iconv_prog.c: Make verbose and omit_invalid global.
	(main): If parameter for -f and -t contain slashes try first to resolve
	the strings as filenames of charmap files.  Use them for conversion
	in this case.
	* iconvdata/run-iconv-test.sh: If charmaps exist also run tests with
	iconv getting charmap names as parameters.